# cortical-remapping-rnn

./: .gitignore  README.md  pyproject.toml  requirements.txt
NoteBooks/: recurent_vs_input_ex_v1.ipynb  rnn_modeing_v2.ipynb
core/: __init__.py  analysis.py  decoder.py  losses.py  ploting.py  rnn.py  task.py  trainer.py  trainer_v1.py
cortical_remapping_rnn.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: rnn_modeing_v1.ipynb  rnn_test_plot.ipynb
scripts/: test_decoder.py  test_rnn.py  test_task.py
